# Decision-Support-Debate

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent_debate/: api.py  cli.py  graph.py  llm.py  prompts.py  schemas.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  style.css
frontend/src/components/: AgentStatusBar.vue  ArgumentCard.vue  DebateForm.vue  DebateView.vue  VerdictPanel.vue
frontend/src/composables/: useDebate.ts
frontend/src/types/: index.ts
infra/docker/backend/: Dockerfile
infra/docker/frontend/: Dockerfile  nginx.conf
